Aligne correctement la `checkbox` d'inscription

--- a/public/assets/styles/formulaire.css
+++ b/public/assets/styles/formulaire.css
@@ -377,6 +377,10 @@ input[type='checkbox'] + label.label-checkbox {
   background: #1992dc30;
 }
 
+.preferences-communication input[type='checkbox'] {
+  transform: translateY(0.4em) !important;
+}
+
 .preferences-communication input[type='checkbox']:not(:checked) {
   background: #eff6ff;
 }
